--- a/css/style.css
+++ b/css/style.css
@@ -1,432 +1,50 @@
+/* ===============Fonts================== */
+@import "/css/fonts.css";
 /*============ Обнуление================ */
-*{
-	padding: 0;
-	margin: 0;
-	border: 0;
-}
-*,*:before,*:after{
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-}
-:focus,:active{outline: none;}
-a:focus,a:active{outline: none;}
-
-nav,footer,header,aside{display: block;}
-
-html,body{
-	height: 100%;
-	width: 100%;
-	font-size: 100%;
-	line-height: 1;
-	font-size: 14px;
-	-ms-text-size-adjust: 100%;
-	-moz-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
-}
-input,button,textarea{font-family:inherit;}
-
-input::-ms-clear{display: none;}
-button{cursor: pointer;}
-button::-moz-focus-inner {padding:0;border:0;}
-a, a:visited{text-decoration: none;}
-a:hover{text-decoration: none;}
-ul li{list-style: none;}
-img{vertical-align: top;}
-
-h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
-/*====================================================*/
-
-body{
-	font-family: 'Montserrat', sans-serif;
+@import "/css/nullstyle.css";
+/*========================================*/
+body {
+	font-family: "Open Sans";
 }
 
-._container{
-	max-width: 1200px;
+.block-1 {
+	background: url(/img/block-1.png);
+}
+
+.container {
+	max-width: 1170px;
 	margin: 0 auto;
 }
 
-
-.block{
-	/* max-width: 100%; */
-	background: url(../img/photo.png) 50%/cover no-repeat;
-	position: relative;
+.header {
 }
-
-.block::after{
-	content: '';
-	z-index: 1;
-	background-color:rgba(30, 30, 30, 0.5);
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	left: 0;
-	top: 0;
+.header__content {
 }
-
-.header__container{
-	position: relative;
-	z-index: 2;
-	display: flex;
-	justify-content: space-between;
-	padding: 20px 0 0 0;
+.header__logo {
 }
-
-.header__logo{
-	margin: 0 0 10px 0;
+.header__logo-title {
 }
-
-
-.menu__list{
-	display: flex;
-	margin: 50px 0 10px 0;
+.header__logo-subtitle {
 }
-
-.menu__list li{
-	margin: 0 25px 0 0;
-	text-transform: uppercase;
-	padding: 0 5px 3px 5px;
+.header__nav {
 }
-
-.menu__list li:last-child{
-	margin: 0;
+.block-1__content {
 }
-
-
-.menu__item{
-	color: seashell;
-	font-size: 13px;
-	transition: .5s;
+.block-1__title {
 }
-
-.menu__item:hover{
-	transition: .3s;
-	font-weight: 700;
-	border-bottom: 1px solid white;
+.block-1__subtitle {
 }
-
-/* ---------------- */
-.contact{
-	margin: 30px 0 0 0;
-	display: flex;
-	flex-direction: column;
+.block-1__text {
 }
-
-.contact__text{
-	display: flex;
-	justify-content: flex-end;
-	font-size: 9px;
-	color: white;
-	text-transform: uppercase;
-}
-
-.contact__block{
-	display: flex;
-	border: 1px solid #F9AF41;
-	border-radius: 6px;
-}
-
-.contact__img{
-	margin: 3px;
-}
-.contact__namber{
-	color: #F9B047;
-	margin: 8px 3px 0 0;
-}
-/* ----------header--------------- */ 
-.block__slogan{
-	margin-top: 15%;
-	text-align: center;
-	position: relative;
-	z-index: 2;
-}
-
-.block__title{
-	font-family: lato;
-	font-size: 29px;
-	color: white;
-	margin: 50px;
-}
-
-.block__title span{
-	font-weight: 700;
-}
-
-.block__link{
-	text-transform: uppercase;
-	padding: 20px 40px;
-	background-color: #F9AF41;
-	color: white;
-	border-radius: 10px;
-	font-family: Montserrat;
-	font-weight: 700;
-	letter-spacing: 3px;
-	display: inline-block;
-
-	margin: 0 0 15% 0;
-	transition: .5s;
-	
-
-}
-.block__link span{
-	border-bottom: 2px solid #F9AF41;
-}
-
-.block__link:hover{
-	background-color: #EE9618;
-	transition: 1s;
-}
-
-/* footer */
-
-.footer-top{
-	background-color: #3A3F44;
-}
-
-.footer__body{
-	display: flex;
-	justify-content: space-between;
-}
-
-.footer__nav{
-	margin:auto 0;
-}
-
-.footer__nav-list li{
-	display: inline-block;
-}
-
-.footer__nav-list li a{
-	color: #BBBBBB;
-	margin: 10px;
-	font-size: 10px;
-}
-
-.footer__nav-list li a:hover{
-	border-bottom: 1px solid;
-}
-
-.footer__info{
-	padding: 0 0 0 10px;
-	margin: 10px;
-	border-left: 1px solid #BBBBBB;
-	display: flex;
-	flex-direction: column;
-}
-
-.wraper_logo {
-	display: flex;
-	justify-content: flex-end;
-}
-
-.asid__text{
-	margin: 5px 0 0 0;
-	display: flex;
-	justify-content: flex-end;
-	color: #BBBBBB;
-}
-
-.asid__nomber{
-	display: flex;
-	color: #BBBBBB;
-	justify-content: flex-end;
-}
-.mail{
-	margin: 5px 0 0 0;
-	display: flex;
-	color: #BBBBBB;
-	justify-content: flex-end;
-}
-
-
-.socials{
-	margin: 8px 0 0 0;
-	display: flex;
-	justify-content: space-between;
-}
-
-.block2{
-	/* max-width: 100%; */
-	background: url(../img/OE9UJ40.png) 50%/cover no-repeat;
-	position: relative;
-}
-
-.block2::after{
-	content: '';
-	z-index: 1;
-	background-color:rgba(30, 30, 30, 0.5);
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	left: 0;
-	top: 0;
-}
-
-.block-achiev{
-	border-bottom: 10px solid #efefef;
+.block-1__social {
 	display: flex;
 }
-.achiev{
-	display: flex;
-	margin: 100px 100px 100px 0;
-	justify-content: space-between;
-}
-
-.achiev__img{
-margin: 0 30px 0 0;
-}
-
-.achiev__text{
-	font-size: 30px;
-	font-weight: 400;
-	color: #646464;
-	display: inline-block;
+.block-1__icon{
 	
 }
-
-.achiev__text span{
-	font-weight: 700;
+.block-1__icon img{
+	height: 20px;
+	width: 20px;
+	opacity: 1;
+	fill: white;
 }
-
-
-.main__header {
-	margin: 100px 0 0 0;
-	text-align: center;
-	font-size: 40px;
-	font-weight: 400;
-	text-transform: uppercase;
-}
-.main__body {
-margin: 150px 0 0 0;
-}
-
-.main__block {
-	display: flex;
-	padding: 0 0 50px 0;
-}
-
-.main__img {
-	margin: 0 0 0 20px;
-}
-
-.main__text {
-	margin: 100px 0 0 150px;
-	flex: content;
-}
-.main__title {
-	font-family: Montserrat;
-	font-size: 40px;
-	font-weight: 400;
-	color: #646464;
-}
-
-.main__title span{
-	color: #f9b047;
-}
-
-.main__subtitle {
-	color: #8b8b8b;
-	font-family: Lato;
-	font-size: 28px;
-	font-weight: 400;
-}
-
-
-
-.block-content__video {
-	min-height: 350px;
-	position: relative;
-	/* padding: 0 25%; */
-	
-	/* display: flex;
-	flex: 1 1 auto; */
-	
-	bottom: 40px;
-	z-index: 2;
-	background: url(../img/3-layers.png) 50% no-repeat;
-}
-
-
-.block-content__video img{
-	margin: 1% 33%;
-	height: 280px;
-	width: 410px;
-	border-radius: 10px;
-}
-
-.block-content__link{
-	max-width: 1000px;
-	display: flex;
-	margin: 0 auto;
-	padding: 0 0 5% 0;
-}
-
-.block-content__list{
-	display: inline-block;
-	position: relative;
-	z-index: 2;
-	text-align: center;
-}
-
-.block-content__list li{
-	display: inline-block;
-	margin: 0 0 0 0;
-	padding: 10px;
-	margin: 3px;
-	border: 1px solid #fbaf41;
-	border-radius: 5px;
-	transition: 0.5s;
-}
-
-.block-content__list li a{
-	font-size: 17px;
-	font-weight: 700;
-	letter-spacing: 3px;
-	text-transform: uppercase;
-	color: white;
-}
-.block-content__list li:hover{
-	background: #fbaf41;
-	padding: 10px;
-	transition: .5s;
-}
-
-
-
-
-
-
-
-
-
-
-
-.footer-bot {
-	background-color: #f9b047;
-}
-
-.footer-bot__body {
-	display: flex;
-	justify-content: space-between;
-	padding: 20px 0;
-}
-
-.footer-bot__link a{
-	margin: 0 10px 0 0;
-	color: #646464;
-	font-size: 11px;
-}
-
-.footer-bot__link a:hover{
-	border-bottom: 1px solid #646464 ;
-}
-
-.Copyright {
-	color: #646464;
-	font-size: 11px;
-}
-
-.Copyright a:hover{
-	border-bottom: 1px solid #646464 ;
-}
-
