--- a/css/fonts.css
+++ b/css/fonts.css
@@ -16,7 +16,7 @@
 	font-family: 'Lato-Thin';
 	src: url('fonts/Lato-Thin.eot');
 	src: local('☺'), url('fonts/Lato-Thin.woff') format('woff'), url('fonts/Lato-Thin.ttf') format('truetype'), url('fonts/Lato-Thin.svg') format('svg');
-	font-weight: normal;
+	font-weight: 100;
 	font-style: normal;
 }
 @font-face {
